Added a Node for the Curvature scale space
Fixed a bug in the splitting points

--- a/plugin.xml
+++ b/plugin.xml
@@ -30,6 +30,14 @@
 			factory-class="org.knime.knip.clump.nodes.curvature.CurvatureNodeFactory" 
 			id="org.knime.knip.clump.nodes.curvature.CurvatureNodeFactory">
 		</node>
+		
+		<node 
+			category-path="/master" 
+			expert-flag="false" 
+			factory-class="org.knime.knip.clump.nodes.ftcurvature.FTCurvatureNodeFactory" 
+			id="org.knime.knip.clump.nodes.ftcurvature.FTCurvatureNodeFactory">
+		</node>
+
 	
 		
 	</extension>
