Interprolate the output of the FTCurvature node

--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                lib/Trainable_Segmentation-2.0.0-SNAPSHOT.jar,\
                lib/ij-1.47i.jar,\
                lib/vecmath.jar,\
-               lib/VIB-lib-2.0.0-SNAPSHOT.jar
+               lib/VIB-lib-2.0.0-SNAPSHOT.jar,\
+               lib/jdt.jar
 jars.compile.order = lib/commons-math3-3.2.jar
 jre.compilation.profile = JavaSE-1.6
 jars.extra.classpath = lib/commons-math3-3.2.jar
